# ktp-presence-dataengine

./: .gitignore  CMakeLists.txt  plasma-dataengine-presence.desktop  presence.cpp  presence.h  presence.operations  presenceservice.cpp  presenceservice.h  presencesource.cpp  presencesource.h  setavatarjob.cpp  setavatarjob.h  setnicknamejob.cpp  setnicknamejob.h  setrequestedpresencejob.cpp  setrequestedpresencejob.h
cmake/modules/: FindTelepathyQt4.cmake
global/: global-presence.cpp  global-presence.h  globalpresenceservice.cpp  globalpresenceservice.h  globalpresencesource.cpp  globalpresencesource.h  setglobalpresencejob.cpp  setglobalpresencejob.h
